--- a/lib/public/routes/views/auth.pug
+++ b/lib/public/routes/views/auth.pug
@@ -16,4 +16,4 @@ html
             lable 비밀번호
           td
             input(name='password' type='password')
-    input(type='submit' value='회원가입')
+      input(type='submit' value='회원가입' name='')
