--- a/lib/public/routes/views/auth.pug
+++ b/lib/public/routes/views/auth.pug
@@ -4,6 +4,7 @@ html
     meta(charset='utf8')
     title Auth
   body
+    include ./header.pug
     form(action="/process/auth" method='post')
       table
         tr
