--- a/lib/public/routes/views/auth.pug
+++ b/lib/public/routes/views/auth.pug
@@ -11,10 +11,10 @@ html
           td
             lable 아이디
           td
-            input(name='username' type='text')
+            input( type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1" name='usename')
         tr
           td
             lable 비밀번호
           td
-            input(name='password' type='password')
+            input( type="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1" name='password')
       input(type='submit' value='회원가입' name='')
