--- a/lib/public/routes/views/auth.pug
+++ b/lib/public/routes/views/auth.pug
@@ -17,4 +17,4 @@ html
             lable 비밀번호
           td
             input( type="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1" name='password')
-      input(type='submit' value='회원가입' name='')
+      input(class="btn btn-default" type="submit" name='' value='회원가입')
