--- a/lib/public/routes/views/auth.pug
+++ b/lib/public/routes/views/auth.pug
@@ -3,18 +3,16 @@ html
   head
     meta(charset='utf8')
     title Auth
+    link(type='text/css' rel='stylesheet' href='/routes/views/css/auth.css')
   body
     include ./header.pug
-    form(action="/process/auth" method='post')
-      table
-        tr
-          td
-            lable 아이디
-          td
-            input( type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1" name='usename')
-        tr
-          td
-            lable 비밀번호
-          td
-            input( type="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1" name='password')
-      input(class="btn btn-default" type="submit" name='' value='회원가입')
+    div#submit.panel-body
+      form(action="/process/auth" method='post')
+        table
+          tr
+            td
+              input( type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1" name='usename')
+          tr
+            td
+              input( type="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1" name='password')
+        input(class="btn btn-default" type="submit" name='' value='회원가입')
