--- a/lib/public/routes/views/header.pug
+++ b/lib/public/routes/views/header.pug
@@ -12,9 +12,9 @@ html
     header
       table
         tr
-          td(onClick='window.location.href="/"')
+          td(onClick='window.location.href="/"' class='header')
             span(class='glyphicon glyphicon-home', aria-hidden="true")
-          td(onClick='window.location.href="/login"')
+          td(onClick='window.location.href="/login"' class='header')
             b Sign In
-          td(onClick='window.location.href="/auth"')
+          td(onClick='window.location.href="/auth"' class='header')
             b Sign Up
