--- a/lib/public/routes/views/login.pug
+++ b/lib/public/routes/views/login.pug
@@ -9,12 +9,8 @@ html
       table
         tr
           td
-            lable 아이디
-          td
-            input(name='username' type='text')
+            input(class='form-control' placeholder='Username' name='username' type='text')
         tr
           td
-            lable 비밀번호
-          td
-            input(name='password' type='password')
+            input(class='form-control' placeholder='Password' name='password' type='password')
       input(type='submit' value='로그인' name='')
