--- a/lib/public/routes/views/antiauto.pug
+++ b/lib/public/routes/views/antiauto.pug
@@ -4,6 +4,8 @@ html
   head
     meta(charset='utf8')
     title Anti Mecro
+    script(src="https://code.jquery.com/jquery-3.3.1.min.js")
     script(src='/routes/views/js/antiauto.js')
   body
+    include ./header.pug
     input#input(type='text')
