--- a/lib/public/routes/views/header.pug
+++ b/lib/public/routes/views/header.pug
@@ -13,8 +13,8 @@ html
       table
         tr
           td(onClick='window.location.href="/"' class='header')
-            span(class='glyphicon glyphicon-home', aria-hidden="true")
+            span.link(class='glyphicon glyphicon-home', aria-hidden="true")
           td(onClick='window.location.href="/login"' class='header')
-            b Sign In
+            b.link Sign In
           td(onClick='window.location.href="/auth"' class='header')
-            b Sign Up
+            b.link Sign Up
