progress bar of development

--- a/lib/public/routes/views/portal.pug
+++ b/lib/public/routes/views/portal.pug
@@ -13,3 +13,7 @@ html
       button(type="button" class="close" data-dismiss="alert" aria-label="Close")
         span(aria-hidden="true") &times;
       b WAWRNING! Starlight의 엄청난 개발실력에 눈이 멀어 버릴 수 있습니다!
+    
+    label(for=".progress") 개발 정도
+    .progress(style='width: 70%')
+      .progress-bar.progress-bar-warning.progress-bar-striped(role='progressbar' aria-valuenow='-128' aria-valuemin='-10000' aria-valuemax='157' style='width: 60%;') -128 / 157
