--- a/lib/public/routes/views/portal.pug
+++ b/lib/public/routes/views/portal.pug
@@ -12,7 +12,7 @@ html
     div(role='alert' class="alert alert-warning alert-dismissible") 
       button(type="button" class="close" data-dismiss="alert" aria-label="Close")
         span(aria-hidden="true") &times;
-      b WAWRNING! Starlight의 엄청난 개발실력에 눈이 멀어 버릴 수 있습니다!
+      b Warning! Starlight의 엄청난 개발실력에 눈이 멀어 버릴 수 있습니다!
     
     label(for=".progress") 개발 정도
     .progress(style='width: 70%')
