--- a/lib/public/routes/views/login.pug
+++ b/lib/public/routes/views/login.pug
@@ -4,6 +4,7 @@ html
     meta(charset='utf8')
     title Auth
     link(type='text/css' rel='stylesheet' href='/routes/views/css/login.css')
+    script(src="https://code.jquery.com/jquery-3.3.1.min.js")
   body
     include ./header.pug
     div#submit.panel-body
